<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/backgroundView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="-8dp"
        android:layout_marginLeft="-8dp"
        android:layout_marginEnd="-8dp"
        android:layout_marginRight="-8dp"
        android:background="@drawable/ic_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center"
                    android:text="@string/title_edit"
                    android:textColor="@color/white"
                    android:textSize="32sp" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/formCardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="32dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/remetenteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/remetente_form"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/remetenteEditText"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_below="@+id/remetenteTextView"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="20dp"
                        android:autofillHints="@string/app_name"
                        android:background="@drawable/ic_edit_text"
                        android:ems="80"
                        android:hint="@string/remetente_form"
                        android:inputType="textPersonName"
                        android:paddingLeft="20dp"
                        android:paddingTop="8dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="8dp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/destinatarioEditText"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_below="@+id/destinatarioTextView"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:autofillHints="@string/destinatario_form"
                        android:background="@drawable/ic_edit_text"
                        android:ems="3"
                        android:hint="@string/destinatario_form"
                        android:inputType="textPersonName"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/destinatarioTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_below="@+id/remetenteEditText"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/remetente_form"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/recadoEditText"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_below="@+id/recadoTextView"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:autofillHints="@string/recado_form"
                        android:background="@drawable/ic_edit_text"
                        android:ems="255"
                        android:gravity="clip_vertical"
                        android:hint="@string/recado_form"
                        android:inputType="textMultiLine"
                        android:lines="8"
                        android:maxLines="16"
                        android:minLines="8"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/recadoTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_below="@+id/destinatarioEditText"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/recado_form"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/salvarButton"
                        android:layout_width="240dp"
                        android:layout_height="56dp"
                        android:layout_below="@+id/recadoEditText"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/ic_button"
                        android:gravity="center"
                        android:text="@string/save"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>